feat: Rework home page